--- a/DeepLens.html
+++ b/DeepLens.html
@@ -113,7 +113,7 @@
               <b>Contact</b>
           </p>
           <p style="text-align:center;">
-              <a href="wlj@mail.dlut.edu.cn"><i class="far fa-envelope fa-4x"></i></a>
+              <a href="mailto:wlj@mail.dlut.edu.cn"><i class="far fa-envelope fa-4x"></i></a>
           </p>
           
           <p style="text-align:center;">
