--- a/DeepLens.html
+++ b/DeepLens.html
@@ -63,8 +63,7 @@
         </div>
         <p style="font-size:12px;">
             Each high resolution, shallow DoF image shown here was synthetically generated from an all-in-focus input image with a single forward pass through
-            a neural network system. Users can freely interact with the system by modifying the focal plane and aperture size. Please view zoomed-in on screen, and use
-            Acrobat Reader to watch the refocusing animations. Photo credits: Franco Vannini, Jim Liestman, wombatarama, and European Space Agency.   
+            a neural network system. Users can freely interact with the system by modifying the focal plane and aperture size. Photo credits: Franco Vannini, Jim Liestman, wombatarama, and European Space Agency.   
         </p>
           <p style="text-align:center; padding-top: 3em">
             <b>Abstract</b>
