--- a/DeepLens.html
+++ b/DeepLens.html
@@ -95,9 +95,9 @@
           </p>
 
           <p style="text-align: center; padding-bottom: 3em">
-          <a href="https://www.github.com/a"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i>Paper</a>
-          <a href="https://www.github.com/a"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i>Code</a>
-          <a href="https://www.github.com/a"><i class="fas fa-database fa-4x" title="Dataset"></i>Dataset</a>
+          <a href="https://www.github.com/a"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i></a>
+          <a href="https://www.github.com/a"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
+          <a href="https://www.github.com/a"><i class="fas fa-database fa-4x" title="Dataset"></i></a>
           </p>
 
           <p style="text-align:center; padding-top: 5em">
