add video and low-res paper

--- a/DeepLens.html
+++ b/DeepLens.html
@@ -95,9 +95,9 @@
           </p>
 
           <p style="text-align: center; padding-bottom: 3em">
-          <a href="https://www.github.com/a"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i></a>
-          <a href="https://www.github.com/a"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
-          <a href="https://www.github.com/a"><i class="fas fa-database fa-4x" title="DataSet"></i></a>
+          <a href="https://arxiv.org/abs/1810.08100"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i></a>
+          <a href="https://www.github.com/"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
+          <a href="https://www.github.com/"><i class="fas fa-database fa-4x" title="DataSet"></i></a>
           </p>
 
           <p style="text-align:center; padding-top: 5em">
@@ -105,7 +105,7 @@
           </p>
 
           <p style="text-align:center;">
-            <iframe width="560" height="315" src="./DeepLens/QYIQbfnS9jA.html" frameborder="0"> </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KOK046f5AFo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </p>
 
           <p style="text-align:center; padding-top: 5em">
