add high-res paper

--- a/DeepLens.html
+++ b/DeepLens.html
@@ -91,13 +91,17 @@
           </p>
 
           <p style="text-align:center; padding-top:5em">
-            <b>Downloads</b>
+            <b>Paper Download</b>
           </p>
 
-          <p style="text-align: center; padding-bottom: 3em">
-          <a href="https://arxiv.org/abs/1810.08100"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i></a>
+          <p style="text-align: center; padding-bottom: 3em" class="downloads">
+          
+          <i class="far fa-file-pdf fa-4x" style="padding-right:0.35em" title="Paper"></i> <span style="padding-right:0.2em">[<a href="https://arxiv.org/abs/1810.08100">Low-res</a>]</span> <span>[<a href="DeepLens/shallowdof.pdf">High-res</a>]</span>
+          <!--
           <a href="https://www.github.com/"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
-          <a href="https://www.github.com/"><i class="fas fa-database fa-4x" title="DataSet"></i></a>
+          <br>
+          <a href="https://www.github.com/"><i class="fas fa-database fa-4x" style="padding-right:0.5em"　title="DataSet"></i></a>
+          -->
           </p>
 
           <p style="text-align:center; padding-top: 5em">
