--- a/DeepLens.html
+++ b/DeepLens.html
@@ -96,7 +96,7 @@
 
           <p style="text-align: center; padding-bottom: 3em">
           <a href="https://arxiv.org/abs/1810.08100"><i class="far fa-file-pdf fa-4x" style="padding-right:0.5em" title="Paper"></i></a>
-          <a href="https://www.github.com/"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
+          <a href="https://github.com/scott89/deeplens_eval"><i class="far fa-file-code fa-4x" style="padding-right:0.5em" title="Code"></i></a>
           <a href="https://www.github.com/"><i class="fas fa-database fa-4x" title="DataSet"></i></a>
           </p>
 
